--- a/thepost/Controller/routing.yaml
+++ b/thepost/Controller/routing.yaml
@@ -1,6 +1,6 @@
 -
   match: "(^/entry/(?:(?:(?P<id>[0-9]+)/?$)|(?:(?P<slug>[A-z0-9_\-.]+)/?$))?)"
-  controller: "PageController"
+  controller: "EntryController"
   method: "index"
 -
   match: "(.*)"
