Added logout route

--- a/thepost/Controller/routing.yaml
+++ b/thepost/Controller/routing.yaml
@@ -11,6 +11,10 @@
   controller: "LoginController"
   method: "submit"
 -
+  match: "(^/logout/$)"
+  controller: "LoginController"
+  method: "logout"
+-
   match: "(^\/$)"
   controller: "DefaultController"
   method: "front"
