Changed methodname front to frontpage

--- a/thepost/Controller/routing.yaml
+++ b/thepost/Controller/routing.yaml
@@ -17,8 +17,8 @@
 -
   match: "(^\/$)"
   controller: "DefaultController"
-  method: "front"
+  method: "frontpage"
 -
   match: "(/?(?P<page>.*))"
   controller: "ErrorController"
-  method: "front"
+  method: "frontpage"
