--- a/ThePost/Controller/routing.yaml
+++ b/ThePost/Controller/routing.yaml
@@ -1,5 +1,5 @@
 -
-  match: "(^/entry/(?:(?:(?P<id>[0-9]+)/?$)|(?:(?P<slug>[A-z0-9_\-.]+)/?$))?)"
+  match: "(^/entry/(?:(?:(?P<id>[0-9]+)/?$)|(?:(?P<slug>[A-z0-9_\-.]+)/?$)))"
   controller: "Output\EntryController"
   method: "index"
 -
