added functionality add Entry

--- a/ThePost/Controller/routing.yaml
+++ b/ThePost/Controller/routing.yaml
@@ -31,6 +31,10 @@
   controller: "Output\InstallController"
   method: "install"
 -
+  match: "(^/add/(?P<type>[a-z]+)/?$)"
+  controller: "Output\EntryController"
+  method: "create"
+-
   match: "(^\/$)"
   controller: "Output\MainController"
   method: "frontpage"
