- Moved create() from UpdateController to CreateController - If slug already exists, add a number to the back, do this until a valid slug has been found

--- a/ThePost/Controller/routing.yaml
+++ b/ThePost/Controller/routing.yaml
@@ -7,6 +7,10 @@
   controller: "CRUD\UpdateController"
   method: "update"
 -
+  match: "(^/create/(?P<type>[a-z]+)/?$)"
+  controller: "CRUD\CreateController"
+  method: "create"
+-
   match: "(^/login/?$)"
   controller: "Output\LoginController"
   method: "login"
