--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,8 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ /index.php [QSA,L]
 
+ErrorDocument 403 /
+
 <Files "*.json">
     Order Deny,Allow
     Deny from all
